fixed spacing between about section sub-heading and section title

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -441,6 +441,10 @@ select {
   max-width: 100%;
 }
 
+.about .section-title h2 {
+  margin-bottom: -30px;
+}
+
 .about .about-content .about-text h3 {
   font-size: 24px;
   margin-bottom: 15px;
